[gd_scene load_steps=17 format=2]

[ext_resource path="res://scripts/spawner.gd" type="Script" id=1]
[ext_resource path="res://scripts/GarbageCollector.gd" type="Script" id=2]
[ext_resource path="res://scripts/GameUI.gd" type="Script" id=3]
[ext_resource path="res://assets/images/car.png" type="Texture2D" id=4]
[ext_resource path="res://assets/images/Cara.png" type="Texture2D" id=5]
[ext_resource path="res://assets/images/poubelle.png" type="Texture2D" id=6]
[ext_resource path="res://assets/images/interface/gauge/gauge.png" type="Texture2D" id=7]
[ext_resource path="res://assets/images/interface/gauge/gauge_over.png" type="Texture2D" id=8]
[ext_resource path="res://themes/GameGuiText.tres" type="Theme" id=9]
[ext_resource path="res://assets/fonts/TrashHand/TrashHand.TTF" type="FontFile" id=10]

[sub_resource type="FontFile" id=6]
size = 40
font_data = ExtResource( 10 )

[sub_resource type="FontFile" id=7]
size = 40
font_data = ExtResource( 10 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 193, 165.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 194, 16.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 100, 385 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 10, 540 )

[node name="GameElements" type="Node2D"]
script = ExtResource( 3 )

[node name="Background2" type="Node2D" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="Background2"]
offset_right = 1920.0
offset_bottom = 1080.0

[node name="VSplitContainer" type="VSplitContainer" parent="Background2/VBoxContainer"]
offset_right = 1920.0
offset_bottom = 768.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.7

[node name="ColorRect" type="ColorRect" parent="Background2/VBoxContainer"]
offset_top = 772.0
offset_right = 1920.0
offset_bottom = 1080.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.28
color = Color( 0.109804, 0.109804, 0.109804, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
offset_right = 1920.0
offset_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VSplitContainer" type="VSplitContainer" parent="MarginContainer/VBoxContainer"]
offset_right = 1920.0
offset_bottom = 785.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
offset_top = 789.0
offset_right = 1920.0
offset_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.37

[node name="NitroGauge" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
offset_right = 200.0
offset_bottom = 291.0

[node name="NitroLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/NitroGauge"]
offset_right = 200.0
offset_bottom = 27.0
theme = ExtResource( 9 )
text = "Nitro"
align = 1

[node name="TextureProgressBar" type="TextureProgressBar" parent="MarginContainer/VBoxContainer/HBoxContainer/NitroGauge"]
offset_top = 31.0
offset_right = 200.0
offset_bottom = 231.0
texture_under = ExtResource( 7 )
texture_progress = ExtResource( 8 )
fill_mode = 4
radial_initial_angle = 218.0
radial_fill_degrees = 282.0

[node name="NitroPercent" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/NitroGauge"]
offset_top = 235.0
offset_right = 200.0
offset_bottom = 262.0
size_flags_horizontal = 3
theme = ExtResource( 9 )
text = "0%"
align = 1

[node name="SpeedGauge" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
offset_left = 204.0
offset_right = 404.0
offset_bottom = 291.0

[node name="SpeedLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/SpeedGauge"]
offset_right = 200.0
offset_bottom = 27.0
theme = ExtResource( 9 )
text = "Speed"
align = 1

[node name="TextureProgressBar" type="TextureProgressBar" parent="MarginContainer/VBoxContainer/HBoxContainer/SpeedGauge"]
offset_top = 31.0
offset_right = 200.0
offset_bottom = 231.0
max_value = 350.0
texture_under = ExtResource( 7 )
texture_progress = ExtResource( 8 )
fill_mode = 4
radial_initial_angle = 218.0
radial_fill_degrees = 282.0

[node name="SpeedText" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/SpeedGauge"]
offset_top = 235.0
offset_right = 200.0
offset_bottom = 262.0
size_flags_horizontal = 3
theme = ExtResource( 9 )
text = "0 km/h"
align = 1

[node name="AlcoholGauge" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
offset_left = 408.0
offset_right = 608.0
offset_bottom = 291.0

[node name="AlcoholLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/AlcoholGauge"]
offset_right = 200.0
offset_bottom = 27.0
theme = ExtResource( 9 )
text = "Alcohol Level"
align = 1

[node name="TextureProgressBar" type="TextureProgressBar" parent="MarginContainer/VBoxContainer/HBoxContainer/AlcoholGauge"]
offset_top = 31.0
offset_right = 200.0
offset_bottom = 231.0
max_value = 4.0
texture_under = ExtResource( 7 )
texture_progress = ExtResource( 8 )
fill_mode = 4
radial_initial_angle = 218.0
radial_fill_degrees = 282.0

[node name="AlcoholText" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/AlcoholGauge"]
offset_top = 235.0
offset_right = 200.0
offset_bottom = 262.0
size_flags_horizontal = 3
theme = ExtResource( 9 )
text = "0%"
align = 1

[node name="Informations" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
offset_left = 612.0
offset_right = 1920.0
offset_bottom = 291.0
size_flags_horizontal = 3

[node name="LabelsVBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/Informations"]
offset_right = 652.0
offset_bottom = 291.0
size_flags_horizontal = 3

[node name="DistanceLeftLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Informations/LabelsVBoxContainer"]
offset_right = 652.0
offset_bottom = 44.0
size_flags_horizontal = 3
theme_override_fonts/font = SubResource( 6 )
text = "Distance Left : "
align = 2

[node name="TopSpeedLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Informations/LabelsVBoxContainer"]
offset_top = 48.0
offset_right = 652.0
offset_bottom = 92.0
size_flags_horizontal = 3
theme_override_fonts/font = SubResource( 6 )
text = "Top speed : "
align = 2

[node name="IncomeLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Informations/LabelsVBoxContainer"]
offset_top = 96.0
offset_right = 652.0
offset_bottom = 140.0
size_flags_horizontal = 3
theme_override_fonts/font = SubResource( 6 )
text = "Money made :"
align = 2

[node name="EfficiencyLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Informations/LabelsVBoxContainer"]
offset_top = 144.0
offset_right = 652.0
offset_bottom = 188.0
size_flags_horizontal = 3
theme_override_fonts/font = SubResource( 6 )
text = "Efficiency :"
align = 2

[node name="TimerLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Informations/LabelsVBoxContainer"]
offset_top = 192.0
offset_right = 652.0
offset_bottom = 236.0
size_flags_horizontal = 3
theme_override_fonts/font = SubResource( 6 )
text = "Time :"
align = 2

[node name="ValuesVBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/Informations"]
offset_left = 656.0
offset_right = 800.0
offset_bottom = 291.0
size_flags_horizontal = 2

[node name="DistanceLeft" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Informations/ValuesVBoxContainer"]
offset_right = 144.0
offset_bottom = 44.0
theme_override_fonts/font = SubResource( 7 )
text = "??? meters"
align = 2

[node name="TopSpeed" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Informations/ValuesVBoxContainer"]
offset_top = 48.0
offset_right = 144.0
offset_bottom = 92.0
theme_override_fonts/font = SubResource( 7 )
text = "??? Km/h"
align = 2

[node name="Income" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Informations/ValuesVBoxContainer"]
offset_top = 96.0
offset_right = 144.0
offset_bottom = 140.0
theme_override_fonts/font = SubResource( 7 )
text = "??? euros"
align = 2

[node name="Efficiency" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Informations/ValuesVBoxContainer"]
offset_top = 144.0
offset_right = 144.0
offset_bottom = 188.0
theme_override_fonts/font = SubResource( 7 )
text = "??? %"
align = 2

[node name="Timer" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Informations/ValuesVBoxContainer"]
offset_top = 192.0
offset_right = 144.0
offset_bottom = 236.0
theme_override_fonts/font = SubResource( 7 )
text = "??? s"
align = 2

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="Spawners" type="Node2D" parent="."]

[node name="CarSpawner" type="Node2D" parent="Spawners"]
position = Vector2( 2000, 540 )
script = ExtResource( 1 )
object_to_spawn = "res://prefabs/Car.tscn"

[node name="Sprite2D" type="Sprite2D" parent="Spawners/CarSpawner"]
texture = ExtResource( 4 )

[node name="TrashSpawner" type="Node2D" parent="Spawners"]
position = Vector2( 1950, 540 )
script = ExtResource( 1 )
object_to_spawn = "res://prefabs/TrashCan.tscn"
spawn_pixel_cooldown = 200

[node name="Sprite2D" type="Sprite2D" parent="Spawners/TrashSpawner"]
texture = ExtResource( 6 )

[node name="BeerSpawner" type="Node2D" parent="Spawners"]
position = Vector2( 1940, 540 )
script = ExtResource( 1 )
object_to_spawn = "res://prefabs/Beer.tscn"
spawn_pixel_cooldown = 4000

[node name="Sprite2D" type="Sprite2D" parent="Spawners/BeerSpawner"]
texture = ExtResource( 5 )

[node name="Borders" type="Node2D" parent="."]

[node name="UpperBorder" type="CharacterBody2D" parent="Borders"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/UpperBorder"]
position = Vector2( 436, 167 )
shape = SubResource( 1 )

[node name="LowerBorder" type="CharacterBody2D" parent="Borders"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/LowerBorder"]
position = Vector2( 437, 753 )
shape = SubResource( 2 )

[node name="GarbageCollector" type="Area2D" parent="Borders"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/GarbageCollector"]
position = Vector2( -200, 385 )
shape = SubResource( 3 )
__meta__ = {
"_editor_description_": "Garbage Collector, destroy every object that crosses it"
}

[node name="EndCollisionCheck" type="Area2D" parent="Borders"]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/EndCollisionCheck"]
position = Vector2( -10, 540 )
shape = SubResource( 5 )

[node name="TruckEndCollisionCheck" type="Area2D" parent="Borders"]
position = Vector2( 2100, 0 )
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/TruckEndCollisionCheck"]
position = Vector2( -10, 540 )
shape = SubResource( 5 )

[connection signal="area_entered" from="Borders/GarbageCollector" to="Borders/GarbageCollector" method="_on_GarbageCollector_area_entered"]
[connection signal="body_entered" from="Borders/GarbageCollector" to="Borders/GarbageCollector" method="_on_GarbageCollector_body_entered"]
[connection signal="body_entered" from="Borders/TruckEndCollisionCheck" to="." method="_on_TruckEndCollisionCheck_body_entered"]
